# bindings/rust/zrraw-sys/Cargo.toml
[package]
name = "zrraw-sys"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/chrischtel/zrraw"
build = "build.rs"

[build-dependencies]
bindgen = "0.72.0"
ureq = "3.0.12"
zip = "4.3.0"

[dependencies]
# No dependencies for sys crate

[features]
default = []
compile-from-source = []